--- a/roll.html
+++ b/roll.html
@@ -1,6 +1,7 @@
 
 <html>
 <head>
+<meta charset="utf-8">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script type="text/javascript">
 
